tests/error/operator_narg.gw
// [contains] operators can only have one or two arguments
 operator void chuck(int i, int j, int k){ }
